--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -23,12 +23,14 @@
   "main": "lib/index.js",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@prisma/client": "^6.19.2",
     "@types/markdown-it": "^14.1.2",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
-    "markdown-it": "^14.1.0"
+    "markdown-it": "^14.1.0",
+    "prisma": "^6.19.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
