fix: resolve import errors by migrating date utilities to dateUtils.ts across all pages

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,11 @@ node_modules/
 # Build outputs
 .next/
 out/
-build/
 dist/
-**/lib/
+build/
+# **/lib/
+**/lib/*.js
+**/lib/*.d.ts
 **/*.js.map
 
 # IDE
