--- a/amplify.yml
+++ b/amplify.yml
@@ -3,17 +3,22 @@ frontend:
   phases:
     preBuild:
       commands:
+        # frontend 폴더가 있으면 해당 폴더에서 의존성 설치, 루트에서도 필요한 경우 설치
+        - if [ -d "frontend" ]; then cd frontend && npm ci; else npm ci; fi
         - npm install
     build:
       commands:
-        # 이미 폴더 안일 확률이 높으므로 cd 없이 시도하거나, 
-        # 에러를 방지하기 위해 아래와 같이 작성합니다.
-        - npx prisma generate --schema=../backend/functions/prisma/schema.prisma || echo "Prisma Skip"
-        - npm run build
+        # Prisma 생성: 루트의 schema를 참조하여 frontend 폴더 내에서 생성 시도
+        - if [ -d "frontend" ]; then cd frontend && npx prisma generate --schema=../backend/functions/prisma/schema.prisma || echo "Prisma Skip"; fi
+        # Next.js 빌드 실행
+        - if [ -d "frontend" ]; then cd frontend && npm run build; else npm run build; fi
   artifacts:
-    baseDirectory: .next
+    # 빌드 결과물(.next)의 위치를 정확히 지정 (루트 기준)
+    baseDirectory: frontend/.next
     files:
       - '**/*'
   cache:
     paths:
+      - frontend/node_modules/**/*
+      - frontend/.next/cache/**/*
       - node_modules/**/*
