--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-location": "^3.968.0",
+    "@aws-sdk/client-s3": "^3.975.0",
     "@aws-sdk/credential-providers": "^3.968.0",
     "axios": "^1.13.2",
     "firebase": "^12.7.0",
