--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,40 +1,29 @@
 {
-  "name": "frontend",
+  "name": "500stayviet-frontend",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "next dev --hostname 0.0.0.0",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "seed": "ts-node --esm scripts/seed-firestore.ts",
-    "seed:properties": "ts-node --esm scripts/add-sample-properties.ts",
-    "add-dates": "ts-node --esm scripts/add-dates-to-properties.ts"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@aws-sdk/client-location": "^3.968.0",
     "@aws-sdk/client-s3": "^3.975.0",
-    "@aws-sdk/credential-providers": "^3.968.0",
-    "axios": "^1.13.2",
-    "firebase": "^12.7.0",
-    "framer-motion": "^12.26.1",
-    "lucide-react": "^0.562.0",
-    "maplibre-gl": "^5.16.0",
-    "next": "16.1.1",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "@tailwindcss/postcss": "^4.1.18",
+    "autoprefixer": "^10.4.23",
+    "framer-motion": "^12.29.0",
+    "lucide-react": "^0.468.0",
+    "next": "15.1.0",
+    "postcss": "^8.5.6",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "dotenv": "^17.2.3",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.1",
-    "tailwindcss": "^4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "@types/node": "^25.0.10",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "typescript": "^5.0.0"
   }
 }
