--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "@aws-sdk/client-s3": "^3.975.0",
     "@tailwindcss/postcss": "^4.1.18",
     "autoprefixer": "^10.4.23",
+    "axios": "^1.13.2",
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.468.0",
+    "maplibre-gl": "^5.16.0",
     "next": "15.1.0",
     "postcss": "^8.5.6",
     "react": "19.0.0",
