--- a/amplify.yml
+++ b/amplify.yml
@@ -3,23 +3,13 @@ frontend:
   phases:
     preBuild:
       commands:
-        # 1. 의존성 설치
-        - cd frontend && npm install
+        - cd frontend
+        - npm install
     build:
       commands:
-        # 2. 파일 탐색 후 Prisma 생성 (가장 확실한 경로들 모두 시도)
-        - |
-          cd frontend
-          if [ -f "../backend/functions/prisma/schema.prisma" ]; then
-            npx prisma generate --schema=../backend/functions/prisma/schema.prisma
-          elif [ -f "./backend/functions/prisma/schema.prisma" ]; then
-            npx prisma generate --schema=./backend/functions/prisma/schema.prisma
-          else
-            echo "Prisma schema not found. Searching..."
-            find .. -name "schema.prisma" -exec npx prisma generate --schema={} \;
-          fi
-        # 3. Next.js 빌드
-        - cd frontend && npm run build
+        # 이미 frontend 폴더 안에 있으므로 경로 지정 없이 바로 실행합니다.
+        - npx prisma generate
+        - npm run build
   artifacts:
     baseDirectory: frontend/.next
     files:
