--- a/amplify.yml
+++ b/amplify.yml
@@ -7,14 +7,22 @@ frontend:
         - npm install
     build:
       commands:
-        # 이미 frontend 폴더 내부에 있으므로 추가적인 cd 없이 실행
+        # Prisma 클라이언트 생성
         - npx prisma generate
+        # Next.js 빌드 실행
         - npm run build
   artifacts:
+    # Next.js App Router의 표준 빌드 출력 폴더 지정
     baseDirectory: frontend/.next
     files:
-      - "**/*"
+      - '**/*'
   cache:
     paths:
       - frontend/node_modules/**/*
       - frontend/.next/cache/**/*
+
+# 리디렉션 규칙을 yml에 명시적으로 포함 (선택 사항이지만 권장)
+# customRules:
+#   - source: '/<*>'
+#     target: '/index.html'
+#     status: '200'
