--- a/amplify.yml
+++ b/amplify.yml
@@ -1,18 +1,21 @@
 version: 1
-applications:
-  - frontend: frontend
-    appRoot: frontend
-    phases:
-      preBuild:
-        commands:
-          - nvm install 20
-          - nvm use 20
-          - npm ci
-      build:
-        commands:
-          - npx prisma generate
-          - npm run build
-    artifacts:
-      baseDirectory: .next
-      files:
-        - '**/*'
+frontend:
+  phases:
+    preBuild:
+      commands:
+        - cd frontend
+        - nvm install 20
+        - nvm use 20
+        - npm ci
+    build:
+      commands:
+        - npx prisma generate
+        - npm run build
+  artifacts:
+    baseDirectory: frontend/.next
+    files:
+      - '**/*'
+  cache:
+    paths:
+      - frontend/node_modules/**/*
+      - frontend/.next/cache/**/*
