--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.975.0",
-    "@prisma/client": "^5.10.0",
+    "@aws-sdk/client-sns": "^3.975.0",
+    "@prisma/client": "^6.19.2",
     "@tailwindcss/postcss": "^4.1.18",
     "autoprefixer": "^10.4.23",
     "axios": "^1.13.2",
@@ -17,6 +18,7 @@
     "lucide-react": "^0.468.0",
     "maplibre-gl": "^5.16.0",
     "next": "15.1.0",
+    "next-auth": "^4.24.13",
     "postcss": "^8.5.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -26,7 +28,7 @@
     "@types/node": "^25.0.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "prisma": "^5.10.0",
+    "prisma": "^6.19.2",
     "typescript": "^5.0.0"
   }
 }
