fix: Amplify 빌드 에러 해결
- package.json에 next-pwa 라이브러리 추가
- next.config.ts를 Amplify 호환 방식으로 수정 (require 안전하게 처리)
- amplify.yml 빌드 설정 업데이트 (캐시 삭제 및 깨끗한 빌드)

--- a/amplify.yml
+++ b/amplify.yml
@@ -7,7 +7,9 @@ applications:
           commands:
             - nvm install 20
             - nvm use 20
-            - npm ci
+            - npm cache clean --force
+            - rm -rf node_modules package-lock.json
+            - npm ci --no-audit --prefer-offline
         build:
           commands:
             - npx prisma generate
@@ -20,3 +22,5 @@ applications:
         paths:
           - node_modules/**/*
           - .next/cache/**/*
+          - public/sw.js
+          - public/workbox-*.js
