--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "maplibre-gl": "^5.16.0",
     "next": "15.1.0",
     "next-auth": "^4.24.13",
+    "next-pwa": "^5.6.0",
     "postcss": "^8.5.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
