--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "@prisma/client": "^7.3.0"
+    "@prisma/client": "^7.3.0",
+    "firebase": "^12.9.0",
+    "firebase-admin": "^13.6.1",
+    "next-pwa": "^5.6.0"
   }
 }
