--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,35 +1,1 @@
-{
-  "name": "500stayviet-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 3000",
-    "build": "npx prisma generate && next build",
-    "postinstall": "npx prisma generate"
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.975.0",
-    "@aws-sdk/client-sns": "^3.975.0",
-    "@prisma/client": "^6.19.2",
-    "@tailwindcss/postcss": "^4.1.18",
-    "autoprefixer": "^10.4.23",
-    "axios": "^1.13.2",
-    "framer-motion": "^12.29.0",
-    "lucide-react": "^0.468.0",
-    "maplibre-gl": "^5.16.0",
-    "next": "15.1.0",
-    "next-auth": "^4.24.13",
-    "next-pwa": "^5.6.0",
-    "postcss": "^8.5.6",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "tailwindcss": "^4.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^25.0.10",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "prisma": "^6.19.2",
-    "typescript": "^5.0.0"
-  }
-}
+{"name":"500stayviet-frontend","version":"0.1.0","private":true,"scripts":{"dev":"next dev -p 3000","build":"npx prisma generate && next build","postinstall":"npx prisma generate"},"dependencies":{"@aws-sdk/client-s3":"^3.975.0","@aws-sdk/client-sns":"^3.975.0","@prisma/client":"^6.19.2","@tailwindcss/postcss":"^4.1.18","autoprefixer":"^10.4.23","axios":"^1.13.2","firebase":"^11.0.2","framer-motion":"^12.29.0","lucide-react":"^0.468.0","maplibre-gl":"^5.16.0","next":"15.1.0","next-auth":"^4.24.13","next-pwa":"^5.6.0","postcss":"^8.5.6","react":"19.0.0","react-dom":"19.0.0","tailwindcss":"^4.0.0"},"devDependencies":{"@types/node":"^25.0.10","@types/react":"^19.0.0","@types/react-dom":"^19.0.0","prisma":"^6.19.2","typescript":"^5.0.0"}}
